# portfolio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.redteam/: .redteam-version  config.toml
fit/: __init__.py  __main__.py  cli.py  grade.py  render.py  score.py
portfolio/: __init__.py  __main__.py  card.py  cli.py  extract.py  extract_bitbucket.py  extract_gitlab.py  grounding.py  i18n.py  jd_source.py  mask.py  model.py  narrative.py  output.py  pipeline.py  render.py  share.py  sources.py  store.py  synthesis.py  web.py
rating/: __init__.py  __main__.py  cli.py  grade.py  profile.py  render.py
reference_check/: __init__.py  __main__.py  cli.py  letter.py  render.py
resume/: __init__.py  __main__.py  cli.py  render.py  select.py
tests/: test_card.py  test_cli.py  test_extract.py  test_extract_bitbucket.py  test_extract_denylist.py  test_extract_gitlab.py  test_fit.py  test_fit_batch.py  test_fit_score_quality.py  test_fit_synonyms.py  test_grounding.py  test_i18n.py  test_jd_keywords_unicode.py  test_jd_source.py  test_lang_threading.py  test_mask.py  test_mask_bitbucket.py  test_mask_ghes.py  test_mask_gitlab.py  test_merge.py  test_narrative.py  test_portfolio_source.py  test_rating.py  test_rating_calibration.py  test_rating_output_gate.py  test_reference_check.py  test_render.py  test_resume_cli.py  test_resume_render.py  test_resume_select.py  test_share.py  test_sources.py  (+8 more)
(+120 files in other folders)
