[project]
name = "portfolio"
version = "0.0.1"
description = "Turn a developer's real GitHub work into a grounded portfolio — every claim traced to evidence, never invented."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AscendyProject" }]
keywords = ["portfolio", "github", "developer", "grounding", "agents", "career"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
