[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio"
version = "0.5.0"
description = "Turn a developer's real GitHub work into a grounded portfolio — every claim traced to evidence, never invented."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AscendyProject" }]
keywords = ["portfolio", "github", "developer", "grounding", "agents", "career"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

# The repo ships several sibling packages as one distribution; list them
# explicitly so setuptools flat-layout auto-discovery doesn't bail out.
[tool.setuptools]
packages = ["portfolio", "resume", "reference_check", "fit", "rating"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
